# lolcalc

./: .gitignore  CMakeLists.txt  README.md
data/: draven.json  draven_test.json  dummy_test.json  nautilus_test.json  tester_test.json
data/champions/: draven.json  dummy.json  jhin.json  nautilus.json  ryze.json  tester.json
data/items/: bloodthirster.json  infinity_edge.json  liandrys_torment.json
include/: Ability.h  AutoAttackStrategy.h  Blueprints.h  Champion.h  ChampionEffects.h  ChampionStrategies.h  Damage.h  DamageContext.h  DataManager.h  Effect.h  EffectConfig.h  EffectRegistry.h  Enums.h  EventBus.h  Factory.h  Item.h  StatSystem.h  Stats.h
include/components/: HealthComponent.h  InventoryComponent.h  SpellbookComponent.h  StatsComponent.h  StatusComponent.h
include/effects/: GenericEffect.h
include/effects/item/: ItemEffect.h
include/strategies/: DefaultAutoAttackStrategy.h
include/strategies/ashe/: AsheAutoAttackStrategy.h
include/strategies/jhin/: JhinAutoAttackStrategy.h
src/: Ability.cpp  Champion.cpp  ChampionEffects.cpp  ChampionStrategies.cpp  DataManager.cpp  Effect.cpp  EffectRegistry.cpp  EventBus.cpp  Factory.cpp  Item.cpp  StatSystem.cpp  main.cpp
src/components/: HealthComponent.cpp  InventoryComponent.cpp  SpellbookComponent.cpp  StatsComponent.cpp  StatusComponent.cpp
src/effects/: GenericEffect.cpp
src/effects/item/: ItemEffects.cpp
src/strategies/: DefaultAutoAttackStrategy.cpp
src/strategies/ashe/: AsheAutoAttackStrategy.cpp
src/strategies/jhin/: JhinAutoAttackStrategy.cpp
(+10 files in other folders)
